# starbound-modpack-launcher

./: LICENSE  README.md  make-release.sh  package-lock.json  package.json
.github/: dependabot.yml  release.yml
.github/workflows/: autobuild.yml  main.yml
src/: App.tsx  main.tsx  style.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.no-updater.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  modinfo.rs  modpack.config  prefs.rs
