[package]
name = "starbound-modpack-launcher"
version = "0.32.0"
description = "Base10 starbound launcher"
authors = ["base10"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.209", features = ["derive"] }
tauri = { version = "1.7.2", features = ["api-all"] }
preferences = "2.0"
rfd = "0.14.1"
reqwest = { version = "0.12.7", features = ["stream"] }
futures-util = "0.3.30"
sha2 = "0.10.8"
bytesize = "1.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
