[package]
name = "starbound-modpack-launcher"
version = "0.41.1"
description = "Base10 starbound launcher"
authors = ["base10"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
preferences = "2.0"
reqwest = { version = "0.12.7", features = ["stream"] }
rfd = { version = "0.15.0", default-features = false, features = ["gtk3"] }
futures-util = "0.3.30"
sha2 = "0.10.8"
bytesize = "1.3.0"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-alpha.2"
tauri-plugin-process = "2.0.0-rc"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = false

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
