[package]
name = "starbound-modpack-launcher"
version = "0.51.0"
description = "Base10 starbound launcher"
authors = ["base10"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
tauri = { version = "2.1.1", features = [] }
preferences = "2.0.0"
reqwest = { version = "0.12.9", features = ["stream"] }
futures-util = "0.3.31"
sha2 = "0.10.8"
bytesize = "1.3.0"
tauri-plugin-shell = "2.0.2"
tauri-plugin-dialog = "2.0.4"
tauri-plugin-notification = "2.0.1"
tauri-plugin-fs = "2.1.0"
tauri-plugin-os = "2.0.1"
tauri-plugin-http = "2.0.4"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-process = "2.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = false

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-updater = "2.1.0"
